--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -12,8 +12,8 @@ on:
 #  release:
 #    types: [published]
   push:
-#    branches:
-#      - master
+    branches:
+      - master
     paths:
       - '.config'
 #  schedule:
@@ -101,7 +101,7 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 V=s
+        make -j$(nproc) || make -j3 V=s
         echo "::set-output name=status::success"
     - name: Upload bin directory
       uses: actions/upload-artifact@master
