--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
-CONFIG_TARGET_bcm27xx=y
-CONFIG_TARGET_bcm27xx_bcm2710=y
-CONFIG_TARGET_bcm27xx_bcm2710_DEVICE_rpi-3=y
+CONFIG_TARGET_x86=y
+CONFIG_TARGET_bcm27xx_x86_64=y
+CONFIG_TARGET_bcm27xx_x86_64_Generic=y
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_ARIA2_BITTORRENT=y
 CONFIG_ARIA2_NOXML=y
@@ -241,7 +241,7 @@ CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libwrap=y
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libzstd=y
-# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-cifsd=y
