--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
-CONFIG_TARGET_x86=y
-CONFIG_TARGET_bcm27xx_x86_64=y
-CONFIG_TARGET_bcm27xx_x86_64_Generic=y
+CONFIG_TARGET_bcm27xx=y
+CONFIG_TARGET_bcm27xx_bcm2711=y
+CONFIG_TARGET_bcm27xx_bcm2711_DEVICE_rpi-4=y
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_ARIA2_BITTORRENT=y
 CONFIG_ARIA2_NOXML=y
